# kstudy

video/Android_51cto_FFmpeg/: .gitignore  settings.gradle
video/Android_51cto_FFmpeg/app/: build.gradle
video/Android_51cto_FFmpeg/app/src/main/: AndroidManifest.xml
video/Android_51cto_FFmpeg/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
video/Android_51cto_FFmpeg/app/src/main/cpp/c4/: decapsulation.cpp
video/Android_51cto_FFmpeg/app/src/main/cpp/c6/: decapsulation.cpp
video/Android_51cto_FFmpeg/app/src/main/cpp/include/libavcodec/: avcodec.h
video/Android_51cto_FFmpeg/app/src/main/res/layout/: activity_main.xml
video/Android_51cto_FFmpeg/app/src/main/res/values/: strings.xml
video/Android_51cto_FFmpeg/gradle/wrapper/: gradle-wrapper.properties
video/Android_51cto_FFmpeg/testopensl/: build.gradle
video/Android_51cto_FFmpeg/testopensl/src/androidTest/java/com/hecate/testopensl/: ExampleInstrumentedTest.java
video/Android_51cto_FFmpeg/testopensl/src/main/: AndroidManifest.xml
video/Android_51cto_FFmpeg/testopensl/src/main/cpp/: CMakeLists.txt  audio.cpp
video/Android_51cto_FFmpeg/testopensl/src/main/java/com/hecate/testopensl/: MainActivity.java
video/Android_51cto_FFmpeg/testopensl/src/main/res/values/: strings.xml
video/Android_51cto_FFmpeg/xplay/: build.gradle
video/Android_51cto_FFmpeg/xplay/src/main/: AndroidManifest.xml
video/Android_51cto_FFmpeg/xplay/src/main/cpp/: CMakeLists.txt  FFDemux.cpp  FFDemux.h  IDemux.cpp  IDemux.h  XData.cpp  XData.h  XLog.cpp  XLog.h  native-lib.cpp
(+9 files in other folders)
